[package]
name = "pgbackuproll"
version = "1.0.1"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
bytesize = "1.1.0"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
itertools = "0.10.5"
systemstat = "0.2.3"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", version = "0.8.2" }
xdg = "2.4.1"
